Fix to bug where half stars under select menu were visible

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -190,3 +190,7 @@ input.invalid:focus + .input-errormsg.visible {
 .select__menu .select__menu-list {
   padding: 0;
 }
+
+.basic-multi-select .select__menu {
+  z-index: 10;
+}
